some inspection fixes